# circuit-synth

./: .claude  .dockerignore  .env.template  .gitignore  .gitmodules  .pm-agent-test-success  .pre-commit-config.yaml  .project.yml  .readthedocs.yaml  API-TRACKING-OVERVIEW.md  ARTIFACT_INSPECTION_REPORT.md  AUTOMATED_TESTING.md  Additional-Repository-Options-Summary.md  BIDIRECTIONAL_SYNC_STATUS.md  BIDIRECTIONAL_UPDATE_PLAN.md  BIDIRECTIONAL_UPDATE_TEST_REPORT.md  BLOCKED.md  BOM_AUDIT_DEV_LOG.md  BOM_AUDIT_FUNCTIONALITY_AUDIT.md  BOM_AUDIT_STATUS_SUMMARY.md  BRANCH_REVIEW.md  CHANGELOG.md  CI_CD_RECOMMENDATIONS.md  CLAUDE.md  CLAUDE_CODE_TESTING_RESEARCH.md  CLAUDE_FOLDER_STRUCTURE_RESEARCH.md  CODE_BASED_CIRCUIT_TOOLS_EXAMPLES.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  COORDINATOR-QUICKSTART.md  Circuit-Synth-Repository-Breakup-Analysis.md  Contributors.md  DEBUG_REPORT_LIB_SYMBOLS_DICTIONARY_STRINGS.md  DEPLOYMENT.md  DESIGN_CHECKING_RESEARCH.md  DFM_REPORT_REQUIREMENTS.md  DOCKER.md  DOCKER_ATTRIBUTION.md  DOCUMENTATION_ACCURACY_FIXES.md  (+267 more)
.claude/: README.md  README_ORGANIZATION.md  mcp_settings.json  session_hook_update.sh  settings.json
Contributors/: Architecture-Overview.md  Claude-Code-Agents-and-Commands.md  Claude-Code-Workflow.md  Development-Setup.md  README.md  Rust-Integration-Guide.md  Testing-Guidelines.md
ESP32_Basic_Board/: ESP32_Basic_Board.kicad_pro
ESP32_C6_Dev_Board/: CLAUDE.md  Debug_Header.kicad_sch  ESP32_C6_Dev_Board.kicad_pcb  ESP32_C6_Dev_Board.kicad_prl  ESP32_C6_Dev_Board.kicad_pro  ESP32_C6_Dev_Board.kicad_sch  ESP32_C6_Dev_Board.net  ESP32_C6_Dev_Board_Main.kicad_sch  ESP32_C6_MCU.kicad_sch  ESP32_C6_Test_Plan.json  ESP32_C6_Test_Plan.md  LED_Blinker.kicad_sch  Power_Supply.kicad_sch  README.md  USB_Port.kicad_prl  USB_Port.kicad_pro  USB_Port.kicad_sch  circuit.json  generate_simulation_outputs.py  simulate_esp32_board.py
ESP32_C6_Dev_Board_python/: main.py  (+3 more)
rust_modules/rust_core_circuit_engine/: Cargo.toml  README.md  pyproject.toml
rust_modules/rust_core_circuit_engine/.cargo/: config.toml
rust_modules/rust_core_circuit_engine/benches/: circuit_benchmarks.rs  component_benchmarks.rs  reference_manager_benchmarks.rs
rust_modules/rust_core_circuit_engine/python/: pyproject.toml
rust_modules/rust_core_circuit_engine/src/: circuit.rs  component.rs  debug_utils.rs  errors.rs  lib.rs  net.rs  pin.rs  reference_manager.rs  utils.rs
rust_modules/rust_core_circuit_engine/tests/: test_circuit.rs
rust_modules/rust_force_directed_placement/: Cargo.toml  README.md
rust_modules/rust_force_directed_placement/benches/: force_directed_benchmark.rs
rust_modules/rust_force_directed_placement/python/: pyproject.toml
rust_modules/rust_force_directed_placement/src/: collision.rs  errors.rs  forces.rs  lib.rs  placement.rs  python.rs  types.rs
rust_modules/rust_force_directed_placement/tests/: integration_tests.rs
rust_modules/rust_io_processor/: Cargo.toml
rust_modules/rust_io_processor/benches/: io_benchmarks.rs
rust_modules/rust_io_processor/logs/llm_conversations/: session_1872a54b-05f2-4a2c-b7b0-6fac289c3a62_20250715_050627.json
rust_modules/rust_io_processor/src/: error.rs  file_io.rs  json_processor.rs  kicad_parser.rs  kicad_parser_complete.rs  lib.rs  memory.rs  python_bindings.rs  validation.rs
rust_modules/rust_io_processor/test_data/: test_circuit.json  test_schematic.kicad_sch
rust_modules/rust_kicad_integration/: CHANGELOG.md  Cargo.toml  Cargo_crates_io.toml  README.md  README_crates_io.md  __init__.py  empty.kicad_sch  my_schematic.kicad_sch  output.kicad_sch  prepare_for_crates_io.sh  pyproject.toml  pyproject_standalone.toml  python_package_structure.md  rust_generated_labels.json
rust_modules/rust_kicad_integration/.github/workflows/: ci.yml
rust_modules/rust_kicad_integration/benches/: schematic_generation.rs
rust_modules/rust_kicad_integration/examples/: add_resistor.rs  basic_schematic.rs  circuit_with_components.rs  hierarchical_design.rs  simple_resistor.rs
rust_modules/rust_kicad_integration/src/: hierarchical_labels.rs  kicad_library.rs  lib.rs  python_bindings.rs  s_expression.rs  schematic_api.rs  schematic_editor.rs  types.rs
rust_modules/rust_kicad_integration/tests/: integration_test.rs  test_component_addition.rs
rust_modules/rust_netlist_processor/: Cargo.toml  README.md  debug_deserialization.rs
rust_modules/rust_netlist_processor/benches/: netlist_generation.rs
rust_modules/rust_netlist_processor/python/: pyproject.toml
rust_modules/rust_netlist_processor/src/: component_gen.rs  data_transform.rs  errors.rs  lib.rs  libpart_gen.rs  net_processor.rs  python_bindings.rs  s_expression.rs
rust_modules/rust_pin_calculator/: Cargo.toml  README.md
rust_modules/rust_pin_calculator/src/: coordinate_transform.rs  lib.rs  pin_calculator.rs  tests.rs  types.rs
rust_modules/rust_reference_manager/: Cargo.toml  README.md
rust_modules/rust_reference_manager/benches/: reference_generation.rs
rust_modules/rust_reference_manager/python/: pyproject.toml
rust_modules/rust_reference_manager/src/: errors.rs  hierarchy.rs  lib.rs  manager.rs  python.rs  validation.rs
rust_modules/rust_reference_manager/tests/: integration_tests.rs
rust_modules/rust_symbol_cache/: Cargo.toml  README.md  pyproject.toml  rust_build_report_20250714_225237.md
rust_modules/rust_symbol_cache/benches/: symbol_cache_benchmark.rs
rust_modules/rust_symbol_cache/python/: pyproject.toml
rust_modules/rust_symbol_cache/src/: cache.rs  indexer.rs  lib.rs  parser.rs  python.rs  search.rs  validation.rs
rust_modules/rust_symbol_cache/tests/: integration_tests.rs
rust_modules/rust_symbol_search/: Cargo.toml  PERFORMANCE_ANALYSIS.md  README.md  build.sh  deploy.sh  pyproject.toml
rust_modules/rust_symbol_search/src/: fuzzy.rs  index.rs  lib.rs  logging.rs  python.rs  search.rs  types.rs
test_project/: main.py  pyproject.toml
test_project/test_project/: test_project.json  test_project.kicad_pcb  test_project.kicad_prl  test_project.kicad_pro  test_project.kicad_sch  test_project.net
(+3123 files in other folders)
