[project]
name = "test-project"
version = "0.0.1"
description = "Test project for circuit-synth development"
requires-python = ">=3.12"
dependencies = []

[tool.uv.sources]
circuit_synth = { path = "..", editable = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
