[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust_core_circuit_engine"
version = "0.1.0"
description = "High-performance core circuit engine for Circuit Synth"
authors = [
    {name = "Circuit Synth Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.maturin]
features = ["pyo3/auto-initialize"]
python-source = "python"
module-name = "rust_core_circuit_engine.rust_core_circuit_engine"