[package]
name = "rust_io_processor"
version = "0.1.0"
edition = "2021"
authors = ["Circuit Synth Team"]
description = "High-performance I/O operations for Circuit Synth - Phase 5 Rust migration"
license = "MIT"

[lib]
name = "rust_io_processor"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# JSON processing with high performance
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"

# File I/O and path handling
tokio-fs = "0.1"
memmap2 = "0.9"
walkdir = "2.0"

# S-expression parsing for KiCad files
sexp = "1.1"
nom = "7.0"

# Data validation and schema
jsonschema = "0.17"
validator = { version = "0.16", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Performance and optimization
rayon = "1.7"
dashmap = "5.5"
once_cell = "1.19"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
pythonize = "0.20"

# Benchmarking
criterion = { version = "0.5", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.8"
pretty_assertions = "1.4"
tokio-test = "0.4"

[features]
default = ["json-optimization", "kicad-parsing", "validation"]
json-optimization = []
kicad-parsing = []
validation = []
benchmarks = ["criterion"]

[[bench]]
name = "io_benchmarks"
harness = false
required-features = ["benchmarks"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = true
