[package]
name = "rust_kicad_schematic_writer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
pyo3-log = "0.9"
anyhow = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.20", features = ["extension-module"] }
lexpr = "0.2.7"
rust_pin_calculator = { path = "../rust_pin_calculator", default-features = false }

[lib]
name = "rust_kicad_schematic_writer"
crate-type = ["cdylib", "rlib"]

[features]
default = []
