[package]
name = "rust_kicad_schematic_writer"
version = "0.1.0"
edition = "2021"
authors = ["Circuit-Synth Contributors"]
description = "High-performance Rust library for generating and editing KiCad schematic files"
documentation = "https://docs.rs/rust_kicad_schematic_writer"
repository = "https://github.com/circuit-synth/circuit-synth"
homepage = "https://github.com/circuit-synth/circuit-synth"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["kicad", "schematic", "eda", "pcb", "circuit"]
categories = ["hardware-support", "parser-implementations", "science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
pyo3-log = { version = "0.9", optional = true }
anyhow = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.20", optional = true }
lexpr = "0.2.7"
rust_pin_calculator = { path = "../rust_pin_calculator", default-features = false }

[lib]
name = "rust_kicad_schematic_writer"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3/extension-module", "pyo3-log"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
pretty_assertions = "1.4"

[[bench]]
name = "schematic_generation"
harness = false
