[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust-kicad-schematic-writer"
version = "0.1.0"
description = "High-performance Rust implementation for generating KiCad schematic files with hierarchical labels"
authors = [
    {name = "Circuit-Synth", email = "dev@circuit-synth.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
keywords = ["kicad", "schematic", "eda", "electronics", "rust", "performance"]

[project.urls]
Homepage = "https://github.com/circuit-synth/rust-kicad-schematic-writer"
Repository = "https://github.com/circuit-synth/rust-kicad-schematic-writer"
Documentation = "https://github.com/circuit-synth/rust-kicad-schematic-writer/blob/main/README.md"

[tool.maturin]
module-name = "rust_kicad_schematic_writer"
features = ["python"]
bindings = "pyo3"