[package]
name = "rust_netlist_processor"
version = "0.1.0"
edition = "2021"
authors = ["Circuit Synth Team"]
description = "High-performance netlist processing engine for Circuit Synth"
license = "MIT"
repository = "https://github.com/circuitsynth/circuit_synth"
keywords = ["netlist", "kicad", "eda", "circuit", "performance"]
categories = ["science", "parsing"]

[lib]
name = "rust_netlist_processor"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# String processing and formatting
indexmap = "2.0"  # Ordered maps for deterministic output

# Parallel processing
rayon = "1.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }

# Performance utilities
ahash = "0.8"  # Fast hashing
smallvec = "1.11"  # Stack-allocated vectors for small collections

# String interning for memory optimization
string-interner = "0.15"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Benchmarking (dev dependency)
criterion = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = ["python-bindings"]
python-bindings = ["pyo3"]
benchmarks = ["criterion"]

# Optimization profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "netlist_generation"
harness = false
required-features = ["benchmarks"]