[package]
name = "rust_pin_calculator"
version = "0.1.0"
edition = "2021"
description = "High-performance pin position calculator and coordinate transformer for KiCad schematic generation"
authors = ["Circuit Synth Team"]

[lib]
name = "rust_pin_calculator"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
approx = "0.5"

[dev-dependencies]
approx = "0.5"

[build-dependencies]
pyo3-build-config = "0.20"

[[bin]]
name = "pin_calculator_cli"
path = "src/bin/main.rs"
required-features = []

[features]
default = ["python-bindings"]
python-bindings = ["pyo3"]