[package]
name = "rust_reference_manager"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust-based reference manager for Circuit Synth"
authors = ["Circuit Synth Team"]
license = "MIT"

[lib]
name = "rust_reference_manager"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
smallvec = "1.11"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }

# Logging
log = { version = "0.4", optional = true }
pyo3-log = { version = "0.9", optional = true }

# Performance and utilities
once_cell = "1.19"
thiserror = "1.0"

# Concurrent data structures for thread safety
dashmap = "5.5"
parking_lot = "0.12"

[features]
default = ["python-bindings", "logging"]
python-bindings = ["pyo3", "pyo3-log"]
logging = ["log", "pyo3-log"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "reference_generation"
harness = false