[package]
name = "rust_symbol_cache"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_symbol_cache"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
dashmap = "6.1"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.10"
memmap2 = "0.9"
lru = "0.12"
parking_lot = "0.12"
thiserror = "1.0"
tracing = "0.1"
glob = "0.3"
regex = "1.10"
dirs = "5.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "symbol_cache_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"