[package]
name = "rust_symbol_search"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_symbol_search"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
ahash = "0.8"
smallvec = "1.11"

# Fuzzy matching
rapidfuzz = "0.3"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }

# Logging
log = { version = "0.4", optional = true }
pyo3-log = { version = "0.9", optional = true }

# Performance and utilities
memmap2 = "0.9"
bytemuck = "1.14"
once_cell = "1.19"

[features]
default = ["python-bindings", "logging"]
python-bindings = ["pyo3", "pyo3-log"]
logging = ["log", "pyo3-log"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1