[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust-symbol-search"
version = "0.1.0"
description = "High-performance Rust-based symbol search engine for KiCad symbols"
authors = [
    {name = "Circuit Synth Team", email = "team@circuitsynth.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
keywords = ["kicad", "symbol", "search", "fuzzy", "performance", "rust"]

dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
benchmark = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/circuitsynth/rust-symbol-search"
Repository = "https://github.com/circuitsynth/rust-symbol-search"
Documentation = "https://rust-symbol-search.readthedocs.io"
"Bug Tracker" = "https://github.com/circuitsynth/rust-symbol-search/issues"

[tool.maturin]
python-source = "python"
module-name = "rust_symbol_search._rust_symbol_search"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true